fix blurry webgl

--- a/docs/style.css
+++ b/docs/style.css
@@ -29,7 +29,7 @@ button{min-width: 50px}
 #modal-overlay {visibility: hidden;color: black }
 .modal-header{padding:10px 0;}
 .modal-background{opacity: 0.8; background-color: #000; left: 0px; top: 0px; width:100%; height:100%; z-index: 1001; position: fixed; }
-.modal-data{left:50%;top:50%;transform: translate(-50%, -50%); position: fixed; background-color: #fff; border:1px solid #000; padding:15px; text-align:center; z-index: 2002; }
+.modal-data{left:50%;top:50%; position: fixed; background-color: #fff; border:1px solid #000; padding:15px; text-align:center; z-index: 2002; }
 .modal-map{background-color: rgb(10,17,25); margin: auto;min-width: 400px;min-height: 400px}
 .modal-footer{position: relative;bottom: 5px;text-align: center;min-width: 400px;margin: 15px auto 0 auto}
 .map-object{position: absolute;width: 10px;height: 10px;transform: translate(-50%, -50%);}
